--- a/indvurl.yml
+++ b/indvurl.yml
@@ -30,34 +30,6 @@
         when: webcode.status != 200
 
 
-      - name: IDCH Admin URL monitoring
-        uri:
-          url: https://itservices.stanfordmed.org/api/AdminPortal/ 
-          validate_certs: False
-          status_code: 200
-          return_content: yes
-        register: webcode
-
-      - name: call c handler
-        shell: echo ""
-        notify: c
-        when: webcode.status != 200
-
-
-      - name: Prism URL monitoring
-        uri:
-          url: https://prism.stanfordhealthcare.org/EpicCareLink_LPCH/common/epic_check.asp?mode=TICKET
-          validate_certs: False
-          status_code: 200
-          return_content: yes
-        register: webcode
-
-      - name: call d handler
-        shell: echo ""
-        notify: d
-        when: webcode.status != 200
-
-
       - name: Prism URL monitoring
         uri:
           url: https://prism.stanfordhealthcare.org/prism/login/login
@@ -98,7 +70,7 @@
         notify: h
         when: webcode.status != 200
      
-      - name: Jobs External URL monitoring
+      - name: Jobs URL monitoring
         uri:
           url: https://96.47.50.157/CSS_External/CSSPage_Welcome.asp
           validate_certs: False
