--- a/cert.yml
+++ b/cert.yml
@@ -3,4 +3,4 @@
   become: true
   tasks:
     - name: Copy and Execute the script
-      script: /home/s0204339/playbooks/sslverify.py
+      script: /opt/test.py
